wso2am/apim/cf.yaml
# Copyright (c) 2019, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

AWSTemplateFormatVersion: 2010-09-09
Description: WSO2 API Manager Clustered deployment in Production with High Availability
Metadata:
  'AWS::CloudFormation::Interface':
    ParameterGroups:
      - Label:
          default: Cluster Configuration
        Parameters:
          - IAMRole
          - KeyPairName
          - WSO2InstanceType
      - Label:
          default: Network Configuration
        Parameters:
          - CertificateName
      - Label:
          default: Database Configuration
        Parameters:
          - DBUsername
          - DBPassword
          - DBType
      - Label:
          default: Environment Configurations
          Parameters:
            - Environment
      - Label:
          default: WSO2 Transit Gateway
        Parameters:
          - TransitGatewayId
    ParameterLabels:
      IAMRole:
        default: AWS IAM Role
      CertificateName:
        default: SSL Certificate Name
      KeyPairName:
        default: Key Pair Name
      DBUsername:
        default: Username
      DBPassword:
        default: Password
      WSO2InstanceType:
        default: Instance Type
      AMIid:
        default: AMI ID
      Product:
        default: Product
      Version:
        default: Version
      Environment:
        default: Environment
      TransitGatewayId:
        default: Transit Gateway Id
Resources:
  WSO2APIMMonitoringInstanceIAMRole:
    Type: AWS::IAM::Role
    Description: IAM Instance role to read AWS resource to discover instances to monitor
    Properties:
      RoleName: !Join
        - '-'
        - - !Ref 'AWS::Region'
          - 'WSO2APIMMonitoringInstanceIAMRole'
      AssumeRolePolicyDocument:
        Statement:
          - Effect: Allow
            Principal:
              Service: [ec2.amazonaws.com]
            Action: sts:AssumeRole
      Path: /
  WSO2APIMMonitoringInstanceIAMProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: "/"
      Roles:
        - Ref: WSO2APIMMonitoringInstanceIAMRole
  WSO2APIMMonitoringInstanceIAMPolicy:
    Type: AWS::IAM::Policy
    DependsOn: WSO2APIMMonitoringInstanceIAMRole
    Description: Read AWS resources to discover instances to monitor
    Properties:
      PolicyName: WSO2APIMMonitoringInstanceReadPolicy
      PolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Sid: '1'
            Effect: Allow
            Action:
              - elasticloadbalancing:Describe*
              - ec2:Describe*
            Resource: "*"
      Roles: [!Ref WSO2APIMMonitoringInstanceIAMRole]
  # networking configurations
  WSO2APIMVPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: 10.1.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
  WSO2APIMPublicSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref WSO2APIMVPC
      CidrBlock: 10.1.254.0/24
      AvailabilityZone: !Select
        - '0'
        - !GetAZs ''
  WSO2APIMPublicSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref WSO2APIMVPC
      CidrBlock: 10.1.252.0/24
      AvailabilityZone: !Select
        - '1'
        - !GetAZs ''
  WSO2APIMPublicInternetGateway:
    Type: 'AWS::EC2::InternetGateway'
  WSO2APIMPublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref WSO2APIMVPC
  WSO2APIMPublicSubnet1RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref WSO2APIMPublicRouteTable
      SubnetId: !Ref WSO2APIMPublicSubnet1
  WSO2APIMPublicSubnet2RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref WSO2APIMPublicRouteTable
      SubnetId: !Ref WSO2APIMPublicSubnet2
  WSO2APIMPublicRoute:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref WSO2APIMPublicRouteTable
      GatewayId: !Ref WSO2APIMPublicInternetGateway
      DestinationCidrBlock: 0.0.0.0/0
    DependsOn: WSO2APIMVPCInternetGatewayAttachment
  WSO2APIMVPCInternetGatewayAttachment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      InternetGatewayId: !Ref WSO2APIMPublicInternetGateway
      VpcId: !Ref WSO2APIMVPC
  WSO2APIMPrivateSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref WSO2APIMVPC
      CidrBlock: 10.1.1.0/24
      AvailabilityZone: !Select
        - '0'
        - !GetAZs ''
  WSO2APIMPrivateSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref WSO2APIMVPC
      CidrBlock: 10.1.2.0/24
      AvailabilityZone: !Select
        - '1'
        - !GetAZs ''
  WSO2APIMPrivateSubnetRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref WSO2APIMVPC
  WSO2APIMPrivateRoute:
    Type: 'AWS::EC2::Route'
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref WSO2APIMNATGateway
      RouteTableId: !Ref WSO2APIMPrivateSubnetRouteTable
  WSO2APIMPrivateSubnet1RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref WSO2APIMPrivateSubnetRouteTable
      SubnetId: !Ref WSO2APIMPrivateSubnet1
  WSO2APIMPrivateSubnet2RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref WSO2APIMPrivateSubnetRouteTable
      SubnetId: !Ref WSO2APIMPrivateSubnet2
  WSO2APIMNATGateway:
    Type: 'AWS::EC2::NatGateway'
    Properties:
      AllocationId: !GetAtt
        - WSO2APIMEIP
        - AllocationId
      SubnetId: !Ref WSO2APIMPublicSubnet1
  WSO2APIMEIP:
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc
  WSO2ProdTransitGatewayAttachment:
    Type: "AWS::EC2::TransitGatewayAttachment"
    Properties:
      SubnetIds:
        - !Ref WSO2APIMPrivateSubnet1
        - !Ref WSO2APIMPrivateSubnet2
      Tags:
        - Key: Name
          Value: WSO2 Transit Gateway
      TransitGatewayId: !Ref TransitGatewayId
      VpcId: !Ref WSO2APIMVPC
  # database configurations
  WSO2APIMDBInstanceSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref WSO2APIMVPC
      GroupDescription: DB Security Group
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '3306'
          ToPort: '3306'
          CidrIp: 0.0.0.0/0
  WSO2APIMDBInstance:
    Type: 'AWS::RDS::DBInstance'
    DeletionPolicy: Delete
    Properties:
      VPCSecurityGroups:
        - !Ref WSO2APIMDBInstanceSecurityGroup
      DBInstanceClass: db.t2.medium
      AllocatedStorage: 5
      BackupRetentionPeriod: '0'
      DBInstanceIdentifier: WSO2APIMDBProdInstance
      DBName: WSO2_AM_DB
      Engine: !Ref DBType
      MasterUsername: !Ref DBUsername
      MasterUserPassword: !Ref DBPassword
      MultiAZ: 'false'
      StorageType: gp2
      DBSubnetGroupName: !Ref WSO2APIMDBSubnetGroup
  WSO2APIMDBSubnetGroup:
    Type: 'AWS::RDS::DBSubnetGroup'
    Properties:
      DBSubnetGroupDescription: DB Subnet Group
      SubnetIds:
        - !Ref WSO2APIMPrivateSubnet1
        - !Ref WSO2APIMPrivateSubnet2
  # File system configurations
  WSO2APIMEFSSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref WSO2APIMVPC
      GroupDescription: EFS Security Group
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '2049'
          ToPort: '2049'
          CidrIp: 0.0.0.0/0
  WSO2APIMEFSFileSystemProd:
    Type: 'AWS::EFS::FileSystem'
    Properties:
      PerformanceMode: generalPurpose
  WSO2APIMPrivateSubnet1EFSMountTarget:
    Type: 'AWS::EFS::MountTarget'
    Properties:
      SubnetId: !Ref WSO2APIMPrivateSubnet1
      FileSystemId: !Ref WSO2APIMEFSFileSystemProd
      SecurityGroups:
        - !Ref WSO2APIMEFSSecurityGroup
  WSO2APIMPrivateSubnet2EFSMountTarget:
    Type: 'AWS::EFS::MountTarget'
    Properties:
      SubnetId: !Ref WSO2APIMPrivateSubnet2
      FileSystemId: !Ref WSO2APIMEFSFileSystemProd
      SecurityGroups:
        - !Ref WSO2APIMEFSSecurityGroup
  # Product configurations
  WSO2APIMBastionSecurityGroupProd:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref WSO2APIMVPC
      GroupDescription: WSO2 Bastion node Security Group
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
  WSO2APIMLoggingSecurityGroupProd:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref WSO2APIMVPC
      GroupDescription: WSO2 Logging Security Group
      GroupName: WSO2LoggingSecurityGroupProd
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5601
          ToPort: 5601
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId: !Ref WSO2APIMBastionSecurityGroupProd
        - IpProtocol: tcp
          FromPort: 5044
          ToPort: 5044
          CidrIp: 0.0.0.0/0
  WSO2APIMMonitoringSecurityGroupProd:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref WSO2APIMVPC
      GroupDescription: WSO2 Bastion node Security Group
      GroupName: WSO2MonitoringSecurityGroupProd
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3000
          ToPort: 3000
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId: !Ref WSO2APIMBastionSecurityGroupProd
  WSO2APIMProductSecurityGroupProd:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref WSO2APIMVPC
      GroupDescription: WSO2 API Manager Security Group
      GroupName: WSO2SecurityGroup
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 9200
          ToPort: 9200
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 9100
          ToPort: 9100
          SourceSecurityGroupId: !Ref WSO2APIMMonitoringSecurityGroupProd
        - IpProtocol: tcp
          FromPort: '2222'
          ToPort: '2222'
          SourceSecurityGroupId: !Ref WSO2APIMMonitoringSecurityGroupProd
        - IpProtocol: tcp
          FromPort: '8280'
          ToPort: '8280'
          SourceSecurityGroupId: !Ref WSO2APIMLoadBalancerSecurityGroupProd
        - IpProtocol: tcp
          FromPort: '9763'
          ToPort: '9763'
          SourceSecurityGroupId: !Ref WSO2APIMLoadBalancerSecurityGroupProd
        - IpProtocol: tcp
          FromPort: '9443'
          ToPort: '9443'
          SourceSecurityGroupId: !Ref WSO2APIMLoadBalancerSecurityGroupProd
        - IpProtocol: tcp
          FromPort: '9443'
          ToPort: '9443'
          SourceSecurityGroupId: !Ref WSO2APIMMonitoringSecurityGroupProd
        - IpProtocol: tcp
          FromPort: '8243'
          ToPort: '8243'
          SourceSecurityGroupId: !Ref WSO2APIMLoadBalancerSecurityGroupProd
        - IpProtocol: tcp
          FromPort: '5672'
          ToPort: '5672'
          SourceSecurityGroupId: !Ref WSO2APIMLoadBalancerSecurityGroupProd
        - IpProtocol: tcp
          FromPort: '5701'
          ToPort: '5701'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '8140'
          ToPort: '8140'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '4000'
          ToPort: '4000'
          CidrIp: 0.0.0.0/0
  WSO2APIMBastionInstanceProd:
    Type: 'AWS::EC2::Instance'
    CreationPolicy:
      ResourceSignal:
        Count: 1
        Timeout: PT10M
    Properties:
      DisableApiTermination: 'false'
      InstanceInitiatedShutdownBehavior: stop
      ImageId: !Ref AMIid
      InstanceType: t2.micro
      KeyName: !Ref KeyPairName
      Monitoring: 'false'
      Tags:
        - Key: Name
          Value: !Join
            - ''
            - - 'WSO2APIMBastion'
              - !Ref Environment
              - 'Instance'
      NetworkInterfaces:
        - DeleteOnTermination: 'true'
          AssociatePublicIpAddress : 'true'
          Description: Primary network interface
          DeviceIndex: 0
          SubnetId: !Ref WSO2APIMPublicSubnet1
          GroupSet:
            - !Ref WSO2APIMBastionSecurityGroupProd
      UserData: !Base64
        'Fn::Sub': |
          Content-Type: multipart/mixed; boundary="//"
          MIME-Version: 1.0

          --//
          Content-Type: text/cloud-config; charset="us-ascii"
          MIME-Version: 1.0
          Content-Transfer-Encoding: 7bit
          Content-Disposition: attachment; filename="cloud-config.txt"

          #cloud-config
          cloud_final_modules:
          - [scripts-user, always]

          --//
          Content-Type: text/x-shellscript; charset="us-ascii"
          MIME-Version: 1.0
          Content-Transfer-Encoding: 7bit
          Content-Disposition: attachment; filename="userdata.txt"

          #!/bin/bash
          exec > >(tee /var/log/user-data.log|logger -t user-data -s 2>/dev/console) 2>&1
          export PATH=~/.local/bin:$PATH
          apt-get update
          pip install https://s3.amazonaws.com/cloudformation-examples/aws-cfn-bootstrap-latest.tar.gz
          export DB_HOSTNAME=${WSO2APIMDBInstance.Endpoint.Address}
          export DB_PORT=${WSO2APIMDBInstance.Endpoint.Port}
          export DB_USERNAME=${DBUsername}
          export DB_PASSWORD=${DBPassword}
          rm -rf /home/wso2user/endpointCars
          rm -rf /home/wso2user/${Product}-${Version}.zip
          sed -i "s/CF_DB_USERNAME/${DBUsername}/g" /usr/local/bin/bashScripts/MySQL/provision_db_scripts.sh
          sed -i "s/CF_DB_PASSWORD/${DBPassword}/g" /usr/local/bin/bashScripts/MySQL/provision_db_scripts.sh
          sed -i "s/CF_DB_HOST/${WSO2APIMDBInstance.Endpoint.Address}/g" /usr/local/bin/bashScripts/MySQL/provision_db_scripts.sh
          sed -i "s/CF_DB_PORT/${WSO2APIMDBInstance.Endpoint.Port}/g" /usr/local/bin/bashScripts/MySQL/provision_db_scripts.sh
          bash /usr/local/bin/bashScripts/MySQL/provision_db_scripts.sh 2>&1 | tee /home/wso2user/db_log.txt
          echo 'export HISTTIMEFORMAT="%F %T "' >> /etc/profile.d/history.sh
          cat /dev/null > ~/.bash_history && history -c
          /usr/local/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource WSO2APIMBastionInstanceProd --region ${AWS::Region}
  WSO2APIMNodeLaunchConfigurationProd:
    Type: 'AWS::AutoScaling::LaunchConfiguration'
    Properties:
      ImageId: !Ref AMIid
      InstanceType: !Ref WSO2InstanceType
      InstanceMonitoring: 'false'
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: '20'
            VolumeType: gp2
            DeleteOnTermination: 'true'
      KeyName: !Ref KeyPairName
      SecurityGroups:
        - !Ref WSO2APIMProductSecurityGroupProd
      UserData: !Base64
        'Fn::Sub': |
          Content-Type: multipart/mixed; boundary="//"
          MIME-Version: 1.0

          --//
          Content-Type: text/cloud-config; charset="us-ascii"
          MIME-Version: 1.0
          Content-Transfer-Encoding: 7bit
          Content-Disposition: attachment; filename="cloud-config.txt"

          #cloud-config
          cloud_final_modules:
          - [scripts-user, always]

          --//
          Content-Type: text/x-shellscript; charset="us-ascii"
          MIME-Version: 1.0
          Content-Transfer-Encoding: 7bit
          Content-Disposition: attachment; filename="userdata.txt"

          #!/bin/bash
          exec > >(tee /var/log/user-data.log|logger -t user-data -s 2>/dev/console) 2>&1
          export PATH=~/.local/bin:$PATH
          apt-get update >> /home/wso2user/install.log
          apt install -y nfs-common >> /home/wso2user/install.log
          pip install https://s3.amazonaws.com/cloudformation-examples/aws-cfn-bootstrap-latest.tar.gz
          wget --no-check-certificate --no-proxy 'http://wso2-cloudformation-templates.s3.amazonaws.com/private_ip_extractor.py' -P /usr/local/bin/
          unzip /home/wso2user/${Product}-${Version}.zip -d /home/wso2user/
          sed -i "s/REGION_NAME/${AWS::Region}/g" /home/wso2user/${Product}-${Version}/repository/conf/axis2/axis2.xml
          sed -i "s/ALB_DNS_NAME/${WSO2APIMLoadBalancerProd.DNSName}/g" /home/wso2user/${Product}-${Version}/repository/conf/carbon.xml
          sed -i "s/ALB_DNS_NAME/${WSO2APIMLoadBalancerProd.DNSName}/g" /home/wso2user/${Product}-${Version}/repository/deployment/server/jaggeryapps/store/site/conf/site.json
          sed -i "s/ALB_DNS_NAME/${WSO2APIMLoadBalancerProd.DNSName}/g" /home/wso2user/${Product}-${Version}/repository/conf/api-manager.xml
          sed -i "s/CF_DB_USERNAME/${DBUsername}/g" /home/wso2user/${Product}-${Version}/repository/conf/datasources/master-datasources.xml
          sed -i "s/CF_DB_PASSWORD/${DBPassword}/g" /home/wso2user/${Product}-${Version}/repository/conf/datasources/master-datasources.xml
          sed -i "s/RDS_DNS_NAME/${WSO2APIMDBInstance.Endpoint.Address}/g" /home/wso2user/${Product}-${Version}/repository/conf/datasources/master-datasources.xml
          tar -xvf /opt/OpenJDK8U-jdk_8u222_linux_x64.tar.gz -C /opt/
          export PRIVATE_IP=$(ifconfig | grep -m 1 'inet ' | awk '{print $2}')
          export LogserverIP=${WSO2APIMLoggingInstanceProd.PrivateIp}
          echo "$LogserverIP logserver" >> /etc/hosts
          sed -i "s/LOCAL-MEMBER-HOST/$PRIVATE_IP/g" /home/wso2user/${Product}-${Version}/repository/conf/axis2/axis2.xml
          sed -i "s/WSO2SecurityGroup/$SECURITYGROUP/g" /home/wso2user/${Product}-${Version}/repository/conf/axis2/axis2.xml
          mkdir -p /mnt/efs
          mount -t nfs4 -o nfsvers=4.1 ${WSO2APIMEFSFileSystemProd}.efs.${AWS::Region}.amazonaws.com:/ /mnt/efs
          sleep 450
          if [ ! -d "/mnt/efs/server" ]; then
              mkdir -p /mnt/efs/server
              cp -r /home/wso2user/${Product}-${Version}/repository/deployment/server /mnt/efs
          fi
          rm -rf  /home/wso2user/${Product}-${Version}/repository/deployment/server
          ln -s /mnt/efs/server /home/wso2user/${Product}-${Version}/repository/deployment/server
          if [ ! -d "/mnt/efs/tenants" ]; then
              mkdir -p /mnt/efs/tenants
              cp -r /home/wso2user/${Product}-${Version}/repository/tenants /mnt/efs
          fi
          rm -rf /home/wso2user/${Product}-${Version}/repository/tenants
          ln -s /mnt/efs/tenants /home/wso2user/${Product}-${Version}/repository/tenants
          echo "${WSO2APIMEFSFileSystemProd}:/ /mnt/efs efs defaults,_netdev 0 0" >> /etc/fstab
          /home/wso2user/${Product}-${Version}/bin/wso2server.sh start
          sleep 30
          end=$((SECONDS+1200))
          while [ $SECONDS -lt $end ] ; do
              sleep 10
              wget --delete-after --server-response --no-check-certificate "https://localhost:9443/carbon/admin/login.jsp"
              if [ $? -eq "0" ] ; then
                /usr/local/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource WSO2APIMNodeAutoScalingGroupProd --region ${AWS::Region}
                break
              fi
          done
          echo 'export HISTTIMEFORMAT="%F %T "' >> /etc/profile.d/history.sh
          cat /dev/null > ~/.bash_history && history -c
    DependsOn:
      - WSO2APIMProductSecurityGroupProd
      - WSO2APIMLoadBalancerProd
      - WSO2APIMVPCInternetGatewayAttachment
      - WSO2APIMDBInstance
      - WSO2APIMBastionInstanceProd
      - WSO2APIMLoggingInstanceProd
  WSO2APIMNodeAutoScalingGroupProd:
    Type: 'AWS::AutoScaling::AutoScalingGroup'
    Properties:
      LaunchConfigurationName: !Ref WSO2APIMNodeLaunchConfigurationProd
      DesiredCapacity: 2
      MinSize: 2
      MaxSize: 2
      TargetGroupARNs:
        - !Ref WSO2APIMALB9443TargetGroupProd
        - !Ref WSO2APIMALB8243TargetGroupProd
      VPCZoneIdentifier:
        - !Ref WSO2APIMPrivateSubnet1
      Tags:
        - Key: Name
          Value: !Join
            - ''
            - - 'WSO2APIM'
              - !Ref Environment
              - 'Instance'
          PropagateAtLaunch: 'true'
        - Key: cluster
          Value: apim
          PropagateAtLaunch: 'true'
        - Key: Environment
          Value: Prod
          PropagateAtLaunch: 'true'
        - Key: ServerType
          Value: 'WSO2'
          PropagateAtLaunch: 'true'
    CreationPolicy:
      ResourceSignal:
        Count: 2
        Timeout: PT30M
    UpdatePolicy:
      AutoScalingRollingUpdate:
        MaxBatchSize: '2'
        MinInstancesInService: '1'
        PauseTime: PT30M
        SuspendProcesses:
          - AlarmNotification
        WaitOnResourceSignals: true
    DependsOn:
      - WSO2APIMLoadBalancerProd
  WSO2APIMLoadBalancerSecurityGroupProd:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref WSO2APIMVPC
      GroupDescription: WSO2 APIM ALB Security Group
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '9763'
          ToPort: '9763'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '9443'
          ToPort: '9443'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '8243'
          ToPort: '8243'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '8280'
          ToPort: '8280'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '4000'
          ToPort: '4000'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '5701'
          ToPort: '5701'
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: '9763'
          ToPort: '9763'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '9443'
          ToPort: '9443'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '8243'
          ToPort: '8243'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '8280'
          ToPort: '8280'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '4000'
          ToPort: '4000'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '5701'
          ToPort: '5701'
          CidrIp: 0.0.0.0/0
  WSO2APIMLoadBalancerProd:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: APIM-prod
      Scheme: internet-facing
      Subnets:
        - !Ref WSO2APIMPublicSubnet1
        - !Ref WSO2APIMPublicSubnet2
      SecurityGroups:
        - !Ref WSO2APIMLoadBalancerSecurityGroupProd
  WSO2APIMALB9443TargetGroupProd:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 10
      HealthCheckProtocol: HTTPS
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 4
      HealthCheckPath: /carbon/admin/login.jsp
      HealthCheckPort: 9443
      Matcher:
        HttpCode: 200
      Name: apim-carbon-prod-9443
      Port: 9443
      Protocol: HTTPS
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: '20'
        - Key: stickiness.enabled
          Value: 'true'
      UnhealthyThresholdCount: 3
      VpcId:
        Ref: WSO2APIMVPC
      Tags:
        - Key: Name
          Value: apim
  WSO2APIMALB8243TargetGroupProd:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 10
      HealthCheckProtocol: HTTPS
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 4
      HealthCheckPath: /services/Version
      HealthCheckPort: 8243
      Matcher:
        HttpCode: 200
      Name: apim-carbon-prod-8243
      Port: 8243
      Protocol: HTTPS
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: '20'
        - Key: stickiness.enabled
          Value: 'true'
      UnhealthyThresholdCount: 3
      VpcId:
        Ref: WSO2APIMVPC
      Tags:
        - Key: Name
          Value: apim
  WSO2APIMALB443ListenerProd:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref WSO2APIMALB9443TargetGroupProd
      Certificates:
        - CertificateArn: !Join
            - ''
            - - 'arn:aws:iam::'
              - !Ref 'AWS::AccountId'
              - ':server-certificate'
              - /
              - !Ref CertificateName
      LoadBalancerArn: !Ref WSO2APIMLoadBalancerProd
      Port: 443
      Protocol: HTTPS
      SslPolicy: ELBSecurityPolicy-TLS-1-1-2017-01
    DependsOn:
      - WSO2APIMLoadBalancerSecurityGroupProd
  WSO2APIMALB8243ListenerProd:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref WSO2APIMALB8243TargetGroupProd
      Certificates:
        - CertificateArn: !Join
            - ''
            - - 'arn:aws:iam::'
              - !Ref 'AWS::AccountId'
              - ':server-certificate'
              - /
              - !Ref CertificateName
      LoadBalancerArn: !Ref WSO2APIMLoadBalancerProd
      Port: 8243
      Protocol: HTTPS
      SslPolicy: ELBSecurityPolicy-TLS-1-1-2017-01
    DependsOn:
      - WSO2APIMLoadBalancerSecurityGroupProd
  WSO2APIMALB9443ListenerProd:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref WSO2APIMALB9443TargetGroupProd
      Certificates:
        - CertificateArn: !Join
            - ''
            - - 'arn:aws:iam::'
              - !Ref 'AWS::AccountId'
              - ':server-certificate'
              - /
              - !Ref CertificateName
      LoadBalancerArn: !Ref WSO2APIMLoadBalancerProd
      Port: 9443
      Protocol: HTTPS
      SslPolicy: ELBSecurityPolicy-TLS-1-1-2017-01
    DependsOn:
      - WSO2APIMLoadBalancerSecurityGroupProd
  MonitoringInstanceProd:
    Type: 'AWS::EC2::Instance'
    Properties:
      DisableApiTermination: 'false'
      InstanceInitiatedShutdownBehavior: stop
      ImageId: !FindInMap
        - WSO2MonitorMasterAMIRegionMap
        - !Ref 'AWS::Region'
        - Ubuntu1804
      InstanceType: t2.large
      IamInstanceProfile: !Ref WSO2APIMMonitoringInstanceIAMProfile
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: '50'
            VolumeType: gp2
            DeleteOnTermination: 'true'
      KeyName: !Ref KeyPairName
      Monitoring: 'false'
      Tags:
        - Key: Name
          Value: WSO2MonitoringProdInstance
      NetworkInterfaces:
        - DeleteOnTermination: 'true'
          AssociatePublicIpAddress: 'true'
          Description: Primary network interface
          DeviceIndex: 0
          SubnetId: !Ref WSO2APIMPublicSubnet1
          GroupSet:
            - !Ref WSO2APIMMonitoringSecurityGroupProd
      UserData: !Base64
        'Fn::Sub': |
          #!/bin/bash
          exec > >(tee /var/log/user-data.log|logger -t user-data -s 2>/dev/console) 2>&1
          export PATH=~/.local/bin:$PATH
          export REGION=${AWS::Region}
          sed -i "s/REGION_NAME/$REGION/g" /etc/prometheus/prometheus.yml
          service prometheus restart
          echo 'export HISTTIMEFORMAT="%F %T "' >> /etc/profile.d/history.sh
          cat /dev/null > ~/.bash_history && history -c
    DependsOn:
      - WSO2APIMProductSecurityGroupProd
      - WSO2APIMLoadBalancerProd
      - WSO2APIMVPCInternetGatewayAttachment
      - WSO2APIMDBInstance
  WSO2APIMLoggingInstanceProd:
    Type: 'AWS::EC2::Instance'
    Properties:
      DisableApiTermination: 'false'
      InstanceInitiatedShutdownBehavior: stop
      ImageId: !FindInMap
        - WSO2LoggingMasterAMIRegionMap
        - !Ref 'AWS::Region'
        - Ubuntu1804
      InstanceType: t2.large
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: '50'
            VolumeType: gp2
            DeleteOnTermination: 'true'
      KeyName: !Ref KeyPairName
      Monitoring: 'false'
      Tags:
        - Key: Name
          Value: WSO2LoggingProdInstance
      NetworkInterfaces:
        - DeleteOnTermination: 'true'
          AssociatePublicIpAddress: 'true'
          Description: Primary network interface
          DeviceIndex: 0
          SubnetId: !Ref WSO2APIMPublicSubnet1
          GroupSet:
            - !Ref WSO2APIMLoggingSecurityGroupProd
      UserData: !Base64
        'Fn::Sub': |
          #cloud-config
          #!/bin/bash
          exec > >(tee /var/log/user-data.log|logger -t user-data -s 2>/dev/console) 2>&1
          export PATH=~/.local/bin:$PATH
          export REGION=${AWS::Region}
          echo 'export HISTTIMEFORMAT="%F %T "' >> /etc/profile.d/history.sh
          cat /dev/null > ~/.bash_history && history -c
    DependsOn:
      - WSO2APIMProductSecurityGroupProd
      - WSO2APIMLoadBalancerProd
      - WSO2APIMVPCInternetGatewayAttachment
      - WSO2APIMDBInstance
Outputs:
  ConsoleURL:
    Value: !Join
      - ''
      - - 'https://'
        - !GetAtt
          - WSO2APIMLoadBalancerProd
          - DNSName
        - '/carbon'
    Description: WSO2 API Manager Management Console URL
  PublisherURL:
    Value: !Join
      - ''
      - - 'https://'
        - !GetAtt
          - WSO2APIMLoadBalancerProd
          - DNSName
        - '/publisher'
    Description: WSO2 APIM Publisher URL for API development and management
  StoreURL:
    Value: !Join
      - ''
      - - 'https://'
        - !GetAtt
          - WSO2APIMLoadBalancerProd
          - DNSName
        - '/store'
    Description: WS02 APIM Store Web application URL (Developer Store)
  AdminURL:
    Value: !Join
      - ''
      - - 'https://'
        - !GetAtt
          - WSO2APIMLoadBalancerProd
          - DNSName
        - '/admin'
    Description: WSO2 APIM Admin service URL
  HttpsURL:
    Value: !Join
      - ''
      - - 'https://'
        - !GetAtt
          - WSO2APIMLoadBalancerProd
          - DNSName
        - ':8243'
    Description: WSO2 APIM HTTPS Gateway endpoint
  HttpURL:
    Value: !Join
      - ''
      - - 'http://'
        - !GetAtt
          - WSO2APIMLoadBalancerProd
          - DNSName
        - ':8280'
    Description: WSO2 APIM HTTP Gateway endpoint
  MonitoringDashboardURL:
    Value: !Join
      - ''
      - - 'http://'
        - !GetAtt
          - MonitoringInstanceProd
          - PublicDnsName
        - ':3000/d/dxHncuHS/'
    Description: Monitoring Dashboard URL (Grafana Dashboard)
  LogDashboardURL:
    Value: !Join
      - ''
      - - 'http://'
        - !GetAtt
          - WSO2APIMLoggingInstanceProd
          - PublicDnsName
        - ':5601'
    Description: Log Dashboard URL (Kibana Dashboard)
  MountTargetIP:
    Value: !GetAtt WSO2APIMPrivateSubnet1EFSMountTarget.IpAddress
Parameters:
  IAMRole:
    Type: String
  KeyPairName:
    Description: The private key used to log in to instances through SSH
    Type: 'AWS::EC2::KeyPair::KeyName'
  CertificateName:
    Description: A valid SSL certificate used for HTTPS
    Type: String
    MinLength: 1
  WSO2InstanceType:
    Type: String
    Default: t2.medium
    AllowedValues:
      - t2.medium
      - t2.large
      - t2.xlarge
      - t2.2xlarge
      - m3.medium
      - m3.large
      - m3.xlarge
      - m3.2xlarge
      - m4.large
      - m4.xlarge
    ConstraintDescription: Must be a valid EC2 instance type
  DBUsername:
    Type: String
  DBPassword:
    Type: String
    NoEcho: true
  DBType:
    Type: String
    Default: MySQL
    AllowedValues:
      - MySQL
      - PostgreSQL
      - Oracle
      - SQL Server
  AMIid:
    Type: String
  Product:
    Type: String
  Version:
    Type: String
  Environment:
    Type: String
  TransitGatewayId:
    Type: String
Mappings:
  WSO2MonitorMasterAMIRegionMap:
    us-east-1:
      Ubuntu1804: ami-05e3b033d210a3b6f
    us-east-2:
      Ubuntu1804: ami-025381ad18973cd94
    us-west-1:
      Ubuntu1804: ami-0d7d4852f5939bc5e
    us-west-2:
      Ubuntu1804: ami-06b2d90e2e762a752
    ap-south-1:
      Ubuntu1804: ami-009c76c55016fb6f6
    ap-northeast-1:
      Ubuntu1804: ami-095dcfe0ba3cbdba3
    ap-northeast-2:
      Ubuntu1804: ami-059e30396d9ddd2d4
    ap-southeast-1:
      Ubuntu1804: ami-047c329a7a16a7efa
    ap-southeast-2:
      Ubuntu1804: ami-00fcfcaff3f2a1abf
    ca-central-1:
      Ubuntu1804: ami-07578c5eac5562c3a
    eu-central-1:
      Ubuntu1804: ami-0b6da9a601b469077
    eu-west-1:
      Ubuntu1804: ami-0bb969fc5dd89c8db
    eu-west-2:
      Ubuntu1804: ami-02cea77e606f91473
    eu-west-3:
      Ubuntu1804: ami-048480df72dc70a99
    eu-north-1:
      Ubuntu1804: ami-0b57116adde41ae4b
    sa-east-1:
      Ubuntu1804: ami-04a87a6e254bc478d
  WSO2LoggingMasterAMIRegionMap:
    us-east-1:
      Ubuntu1804: ami-089c43fe12d048b25
    us-east-2:
      Ubuntu1804: ami-0b382084a3cc80fb7
    us-west-1:
      Ubuntu1804: ami-0b6d9c2c447ab4299
    us-west-2:
      Ubuntu1804: ami-0897dc385cc87c84a
    ap-south-1:
      Ubuntu1804: ami-092e3cdeac40647ef
    ap-northeast-1:
      Ubuntu1804: ami-0e188a8f0a17f5359
    ap-northeast-2:
      Ubuntu1804: ami-017825b1c521d02c5
    ap-southeast-1:
      Ubuntu1804: ami-0a15b160762a9664b
    ap-southeast-2:
      Ubuntu1804: ami-0b7e0a634a1356911
    ca-central-1:
      Ubuntu1804: ami-0ef8ecec9501bf050
    eu-central-1:
      Ubuntu1804: ami-0521c2773875c9f2e
    eu-west-1:
      Ubuntu1804: ami-0d63a1ebc624058cd
    eu-west-2:
      Ubuntu1804: ami-0e8752d4902c13a57
    eu-west-3:
      Ubuntu1804: ami-0b48a1bd6d96eba46
    eu-north-1:
      Ubuntu1804: ami-05805bdf26a4afe6c
    sa-east-1:
      Ubuntu1804: ami-0393cec4dc744d66d
